refactor: remove Javadoc documentation from the project
- Deleted the JAVADOC.md file, which contained comprehensive API documentation for the Super Bomberman project.
- Updated README.md to reflect the removal of the Javadoc documentation and ensure clarity on current documentation practices.

These changes streamline the project by eliminating outdated documentation, focusing on maintaining relevant and up-to-date resources for developers.